--- a/src/package.json
+++ b/src/package.json
@@ -13,7 +13,8 @@
     "handlebars-helpers": "0.9.3",
     "minimatch": "3.0.2",
     "mocha": "2.3.3",
-    "typescript": "1.8.7"
+    "typescript": "1.8.7",
+    "azure-storage": "2.2.1"
   },
   "devDependencies": {
     "@types/handlebars": "^3.0.28",
